<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.brutusin</groupId>
        <artifactId>brutusin</artifactId>
        <version>1.0.4</version>
    </parent>
    <groupId>org.brutusin</groupId>
    <artifactId>wava</artifactId>
    <packaging>jar</packaging>   
    <version>1.4.2-SNAPSHOT</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>A RSS-memory-aware scheduler for Linux batch processes</description>
    
    <url>https://github.com/brutusin/wava</url>
    
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/brutusin/wava/issues</url>
    </issueManagement>
    
    <ciManagement>
        <system>travis-ci</system>
        <url>https://travis-ci.org/brutusin/wava</url>
    </ciManagement>
    
    <scm>
        <url>https://github.com/brutusin/wava</url>
        <connection>scm:git:https://github.com/brutusin/wava.git</connection>
        <developerConnection>scm:git:https://github.com/brutusin/wava.git</developerConnection>
        <tag>v1.0.2</tag>
    </scm>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>dd/MM/yyyy HH:mm:ss</maven.build.timestamp.format>
        <buildNumber>${maven.build.times|tamp}</buildNumber>
        
        <brutusin-commons-version>1.5.3-SNAPSHOT</brutusin-commons-version>
        <brutusin-json-version>1.4.1</brutusin-json-version>
        <brutusin-json-provider-version>2.5.3</brutusin-json-provider-version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>   
        </dependency>
        <dependency>
            <groupId>org.brutusin</groupId>
            <artifactId>commons</artifactId>
            <version>${brutusin-commons-version}</version>
        </dependency>
        <dependency>
            <groupId>org.brutusin</groupId>
            <artifactId>json</artifactId>
            <version>${brutusin-json-version}</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.brutusin</groupId>
            <artifactId>json-provider</artifactId>
            <version>${brutusin-json-provider-version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache</artifactId>
            <version>2.10.2.2.21</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>1.7.21</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>brutusin-rpc.version</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>brutusin-rpc.version</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins> 
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                            </transformers>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>executable</shadedClassifierName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
